# synthesis-tools

./: LICENSE  README.md  ghc-hacking.cabal  notes.md
app/: Main.hs
data/: Example.hs
hs/: CHANGELOG.md  notes.txt  synthesis-tools.cabal
hs/app/: Main.hs
hs/src/: Example.hs
hs/src/Synthesize/: Function.hs  GHC.hs  Monad.hs  MonadTransformer.hs  Run.hs
src/: AutoMonadStack.hs  Example.hs  MyGhci.hs  MyLib.hs  PrintNames.hs  TypeConstraints.hs
src/Synthesize/: GHC.hs  MonadTransformer.hs  Run.hs
vscode/: CHANGELOG.md  README.md  package-lock.json  package.json
vscode/src/: extension.ts  result.ts  synthesis.ts
