cabal-version:      3.0
name:               synthesis-tools
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Micah Cantor
maintainer:         micahcantor01@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wno-unrecognised-pragmas

library
    import:           warnings
    exposed-modules:  Synthesize.GHC, Synthesize.Function, Synthesize.Monad, Synthesize.MonadTransformer, Synthesize.Run, MyGhci
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.16.3.0,
        exceptions,
        filepath,
        ghc,
        ghc-paths,
        mtl,
        haskeline,
    hs-source-dirs:   src
    default-language: Haskell2010

executable synthesis-tools
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.16.3.0,
        synthesis-tools

    hs-source-dirs:   app
    default-language: Haskell2010
